@@ -35,7 +35,6 @@ public class PresenterTestCase {
 		assertEquals(2, display.getOptions().size());
 	}
 
-	
 	@Test
 	public void reset() {
 		
@@ -295,5 +294,26 @@ public class PresenterTestCase {
 		
 		assertEquals(0, presenter.getMaxScore());
 		assertEquals(0, presenter.getMaxScore());
+	}
+
+	@Test
+	public void resetVisibility() throws SAXException, IOException {
+		InputStream inputStream = getClass().getResourceAsStream("testdata/choice3.xml");
+		XMLParserMockup xmlParser = new XMLParserMockup();
+		Element element = xmlParser.parser(inputStream);
+		
+		ChoiceModel module = new ChoiceModel();
+		module.load(element, "");
+		
+		PlayerServicesMockup services = new PlayerServicesMockup();
+		ChoiceViewMockup display = new ChoiceViewMockup(module);
+		ChoicePresenter presenter = new ChoicePresenter(module, services);
+		presenter.addView(display);
+
+		assertFalse(display.isVisible());
+		presenter.executeCommand("show", null);
+		assertTrue(display.isVisible());
+		presenter.executeCommand("reset", null);
+		assertFalse(display.isVisible());
 	}
 }
